# gcaa-notam

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/notam/: config.py  downloader.py  main.py  notifier.py  parser.py
tests/: test_downloader.py  test_notifier.py  test_parser.py
